Changed: Log level set to ERROR to prevent warning messages about response time of pn532 NFC sensor

--- a/esphome/tagreader-reu.yaml
+++ b/esphome/tagreader-reu.yaml
@@ -74,8 +74,8 @@ switch:
 
 # Enable logging
 logger:
-# level: VERY_VERBOSE
-# level: VERBOSE
+  logs:
+    component: ERROR
 
 # Enable Home Assistant API
 api:
