--- a/esphome/tagreader-seb.yaml
+++ b/esphome/tagreader-seb.yaml
@@ -68,8 +68,8 @@ switch:
 
 # Enable logging
 logger:
-  # level: VERY_VERBOSE
-  # level: VERBOSE
+  logs:
+    component: ERROR
 
 # Enable Home Assistant API
 api:
