--- a/automations.yaml
+++ b/automations.yaml
@@ -2409,7 +2409,7 @@
     entity_id: sun.sun
     attribute: azimuth
     above: 90
-    below: 125
+    below: 150
   action:
   - service: cover.set_cover_position
     data:
@@ -2431,7 +2431,7 @@
   - platform: numeric_state
     entity_id: sun.sun
     attribute: azimuth
-    above: 135
+    above: 150
   - platform: numeric_state
     entity_id: sun.sun
     below: 90
@@ -3134,28 +3134,29 @@
     at: '15:58:00'
   condition: []
   action:
-  - service: rest_command.solax_local_charge_battery_from_grid
-    data:
-      level: 10
-  - delay:
-      hours: 0
-      minutes: 0
-      seconds: 10
-      milliseconds: 0
-  - service: rest_command.solax_local_set_forced_charge_start
-    data:
-      value: '{{0 + 0 * 256}}
+  - repeat:
+      sequence:
+      - service: rest_command.solax_local_charge_battery_from_grid
+        data:
+          level: 10
+      - delay:
+          seconds: 10
+      - service: rest_command.solax_local_set_forced_charge_start
+        data:
+          value: '{{0 + 0 * 256}}
 
-        '
-  - delay:
-      hours: 0
-      minutes: 0
-      seconds: 10
-      milliseconds: 0
-  - service: homeassistant.update_entity
-    data: {}
-    target:
-      entity_id: sensor.solax_rest_local_settings
+            '
+      - delay:
+          seconds: 10
+      - service: homeassistant.update_entity
+        data: {}
+        target:
+          entity_id: sensor.solax_rest_local_settings
+      until:
+      - condition: template
+        value_template: '{{ (states(''sensor.solax_local_battery_setting_start_charge'')
+          == ''03:05'' and states(''sensor.solax_local_battery_charge_from_grid_to'')|int==states(''input_number.solax_battery_soc_target'')|int)
+          or repeat.index == 3 }}      '
   mode: single
 - id: '1693819732477'
   alias: 'Solax: Force grid charge'
@@ -3163,7 +3164,7 @@
     for the day is low
   trigger:
   - platform: time
-    at: 04:00:00
+    at: 03:00:00
   condition:
   - condition: numeric_state
     entity_id: sensor.solcast_pv_forecast_forecast_today
@@ -3180,38 +3181,42 @@
       value: "{% set forecast_kwh = states('sensor.solcast_pv_forecast_forecast_today')|float
         %}  {% set battery_usable_kwh = 5.8*0.9 %} {% set charge_from_grid_kwh = (13
         - forecast_kwh) %} {% set charge_from_grid_pc = 10 + 100*charge_from_grid_kwh/battery_usable_kwh%}
-        {{min(charge_from_grid_pc|int,100)}}    \n"
+        {{max(0,min(charge_from_grid_pc|int,100))}}    \n"
     target:
       entity_id: input_number.solax_battery_soc_target
-  - service: rest_command.solax_local_charge_battery_from_grid
-    data:
-      level: '{{states(''input_number.solax_battery_soc_target'') | int}}
+  - repeat:
+      sequence:
+      - service: rest_command.solax_local_charge_battery_from_grid
+        data:
+          level: '{{states(''input_number.solax_battery_soc_target'') | int}}
 
-        '
-  - delay:
-      hours: 0
-      minutes: 0
-      seconds: 10
-      milliseconds: 0
-  - service: rest_command.solax_local_set_forced_charge_start
-    data:
-      value: '{{4 + 5 * 256}}
+            '
+      - delay:
+          seconds: 10
+      - service: rest_command.solax_local_set_forced_charge_start
+        data:
+          value: '{{3 + 5 * 256}}
 
-        '
-  - service: notify.mobile_app_toms_phone
-    data:
-      message: 'Home battery set to charge from grid. Target: {{states(''input_number.solax_battery_soc_target'')}}%
-        Solar Forecast: {{states(''sensor.solcast_pv_forecast_forecast_today'')| round(2)}}kWh'
-      title: "\U0001F324 Solar "
-  - delay:
-      hours: 0
-      minutes: 0
-      seconds: 15
-      milliseconds: 0
-  - service: homeassistant.update_entity
-    data: {}
-    target:
-      entity_id: sensor.solax_rest_local_settings
+            '
+      - service: notify.mobile_app_toms_phone
+        data:
+          message: 'Home battery set to charge from grid. Target: {{states(''input_number.solax_battery_soc_target'')}}%
+            Solar Forecast: {{states(''sensor.solcast_pv_forecast_forecast_today'')|
+            round(2)}}kWh Attempt: {{repeat.index}}'
+          title: "\U0001F324 Solar "
+      - delay:
+          seconds: 10
+      - service: homeassistant.update_entity
+        data: {}
+        target:
+          entity_id: sensor.solax_rest_local_settings
+      - delay:
+          seconds: 10
+      until:
+      - condition: template
+        value_template: '{{ (states(''sensor.solax_local_battery_setting_start_charge'')
+          == ''03:05'' and states(''sensor.solax_local_battery_charge_from_grid_to'')|int==states(''input_number.solax_battery_soc_target'')|int)
+          or repeat.index == 3 }}      '
   mode: single
 - id: '1696098127864'
   alias: Dino
